catalog_engine/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: adminer.postgreconnect.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: elasticsearch-es-http
                port:
                  number: 8080
